--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,11 +30,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: ^3.4.1
+  firebase_core: ^3.6.0
   firebase_auth: ^5.2.1
   google_sign_in: ^6.2.1
   flutter_riverpod: ^2.5.1
   file_picker: ^8.1.2
+  firebase_storage: ^12.3.2
+  cloud_firestore: ^5.4.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
