--- a/firebase.json
+++ b/firebase.json
@@ -1,1 +1,38 @@
-{"flutter":{"platforms":{"android":{"default":{"projectId":"owaravi","appId":"1:796669288308:android:007b6b725d6a99a578d621","fileOutput":"android/app/google-services.json"}},"ios":{"default":{"projectId":"owaravi","appId":"1:796669288308:ios:58909d8ec9b8e29178d621","uploadDebugSymbols":false,"fileOutput":"ios/Runner/GoogleService-Info.plist"}},"dart":{"lib/firebase_options.dart":{"projectId":"owaravi","configurations":{"android":"1:796669288308:android:007b6b725d6a99a578d621","ios":"1:796669288308:ios:58909d8ec9b8e29178d621","web":"1:796669288308:web:c1bc1f7293f9007078d621"}}}}}}
+{
+  "flutter": {
+    "platforms": {
+      "android": {
+        "default": {
+          "projectId": "owaravi",
+          "appId": "1:796669288308:android:007b6b725d6a99a578d621",
+          "fileOutput": "android/app/google-services.json"
+        }
+      },
+      "ios": {
+        "default": {
+          "projectId": "owaravi",
+          "appId": "1:796669288308:ios:58909d8ec9b8e29178d621",
+          "uploadDebugSymbols": false,
+          "fileOutput": "ios/Runner/GoogleService-Info.plist"
+        }
+      },
+      "dart": {
+        "lib/firebase_options.dart": {
+          "projectId": "owaravi",
+          "configurations": {
+            "android": "1:796669288308:android:007b6b725d6a99a578d621",
+            "ios": "1:796669288308:ios:58909d8ec9b8e29178d621",
+            "web": "1:796669288308:web:c1bc1f7293f9007078d621"
+          }
+        }
+      }
+    }
+  },
+  "firestore": {
+    "rules": "firestore.rules",
+    "indexes": "firestore.indexes.json"
+  },
+  "storage": {
+    "rules": "storage.rules"
+  }
+}
